@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add Test2::Tools::GenTemp
+
 0.000075  2017-09-10 21:22:17-07:00 America/Los_Angeles
 
     - Add version to Test2::Event::Times
